<resources>
    <string name="app_name">Taller 3 SeekAndSolve</string>
    <string name="inicia_sesi_n">Inicia sesión</string>
    <string name="bienvenido_de_nuevo">Bienvenido de nuevo</string>
    <string name="no_tienes_una_cuenta">No tienes una cuenta?</string>
    <string name="reg_strate">Regístrate</string>
    <string name="contrasenia">Contraseña</string>
    <string name="crea_tu_cuenta">Crea tu cuenta.</string>
    <string name="ingresa_tus_datos">Ingresa tus datos</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Email</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="confirmar_contrasenia">Confirmar contraseña</string>
    <string name="numero_identificacion">Número de identifcación</string>
    <string name="warning">Al registrarte, aceptas nuestras Condiciones de Servicio y Política de Privacidad</string>
    <string name="ya_tienes_una_cuenta">Ya tienes una cuenta?</string>
    <string name="seleccionar_imagen">Seleccionar imagen</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="registrarse">Registrarse</string>
    <string name="logout">Log Out</string>
    <string name="establecer_disponibilidad">Establecerse no disponible</string>
    <string name="opcion3_menu">Ver usuarios disponibles</string>
    <string name="ver_posicion">Ver posición</string>
</resources>