<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Logica.LoginActivity">

    <TextView
        android:id="@+id/iniciaSesionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicia_sesi_n"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="130dp"/>

    <TextView
        android:id="@+id/bienvenidoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido_de_nuevo"
        android:textSize="18sp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/iniciaSesionText"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombreUsuarioOCorreoLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bienvenidoText"
        app:layout_constraintWidth_percent="0.8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombreUsuarioOCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_de_usuario_o_correo"
            android:inputType="textPersonName"
            android:padding="15dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contraseniaILayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nombreUsuarioOCorreoLayout"
        app:layout_constraintWidth_percent="0.8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasenia"
            android:inputType="textPassword"
            android:padding="15dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/iniciarSesionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inicia_sesi_n"
        android:textColor="@color/tertiaryColor"
        app:layout_constraintTop_toBottomOf="@id/contraseniaILayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="40dp"/>

    <TextView
        android:id="@+id/noTienesCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_tienes_una_cuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/registrateButtonText"
        android:layout_marginBottom="60dp"
        />

    <Button
        android:id="@+id/registrateButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_strate"
        android:textColor="@color/blue"
        android:background="?android:attr/selectableItemBackground"
        android:padding="0dp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/noTienesCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="45dp" />


</androidx.constraintlayout.widget.ConstraintLayout>